Changes made to images and font size
Changes made to reflect me.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div class="wrap">
 	<div class="section sTop">
 		<div class="inner">
-			<h1 class="title">Something about seattle</h1>
-			<h2 class="subtitle">Nobody cares about the east side</h2>
+			<h1 class="title">Something about Colorado</h1>
+			<h2 class="subtitle">All you need for happiness is a good horse!</h2>
 		</div>
 	</div>
 
@@ -27,19 +27,21 @@
 
 	<div class="section s1" id="s1">
 		<div class="inner ">
-			<h1>My Mopeds</h1>
+			<h1>My Expensive Hobby</h1>
       	<div class="section">
-					<a href="http://www.boltmotorbikes.com/"><img src="http://i.imgur.com/BXOdmQ7.jpg"/></a>
+					<a href="https://www.google.com/imgres?imgurl=http://www.lacyquarterhorses.com/quarter-horses-for-sale-images/quarter-horse-breeding-stallions/Quarter-Horse-San-Bolero.JPG&imgrefurl=http://www.lacyquarterhorses.com/breedingstallions.html&h=336&w=448&tbnid=oegIpcgHvhfeXM:&tbnh=150&tbnw=200&docid=jK9lgJ3qHEdpgM&itg=1&usg=__j7jkD972HlxZLiqFYLy27AOf5J8=">
+						<img src="http://www.lacyquarterhorses.com/quarter-horses-for-sale-images/quarter-horse-breeding-stallions/Quarter-Horse-San-Bolero.JPG"/></a>
 				</div>
 		</div>
 	</div>
 
 	<div class="section s2" id="s2">
 		<div class="inner">
-			<h1>Why Mopeds?</h1>
-      <h2>Because they are wicked fun!</h2>
+			<h1>Physical Exercise?</h1>
+      <h2>Trying Sitting!</h2>
       <div class="section">
-				<a href="http://www.boltmotorbikes.com/"><img src="https://mopedschool.files.wordpress.com/2014/06/tomos.jpg" title="Me in the glory days"/></a>
+				<a href="https://www.google.com/imgres?imgurl=http://www.brigadoonfarm.com/sale/Eduardo_stopping.jpg&imgrefurl=http://www.brigadoonfarm.com/sale/sale.htm&h=480&w=596&tbnid=FZ3rCVXXcKja6M:&docid=6vmyUvmiVBT0HM&ei=autoVtLaBPLIjgShsJiYAw&tbm=isch&ved=0ahUKEwjSt42Rp9DJAhVypIMKHSEYBjMQMwgzKBIwEg">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOQlG-3m0sacbEZcjse-nxEKujqN1iPdwyWDLoInJLkoh2kPdo" title="Sit and Slide"/></a>
 			</div>
 		</div>
 	</div>
@@ -48,8 +50,8 @@
 
 	<div class="section s3" id="s3">
 		<div class="inner">
-			<h1>Try Mopeds!</h1>
-      <h2>My wife Alissa tried mopeds and she loves them!</h2>
+			<h1>Try Trails!</h1>
+      <h2>Get back to Nature!</h2>
         <div class="section">
 					<a href="http://www.boltmotorbikes.com/"><img src="http://i.imgur.com/AVmlW8k.jpg" title="Alissa McBain"/></a>
 				</div>
