linked menu to Jennifer's facebook account, added additional heading
Creating web page for Jennifer Paul's Horse Training Business

--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
 <div class="wrap">
 	<div class="section sTop">
 		<div class="inner">
-			<h1 class="title">Something about Colorado</h1>
+			<h1 class="title">JP's Performance Horse Training</h1>
 			<h2 class="subtitle">All you need for happiness is a good horse!</h2>
+			<h3 class="subtitle">What I went through happened. Who I was existed. I needed my past, and I needed my mistakes to get me where I am now.</h3>
 		</div>
 	</div>
 
 	<div class="subMenu" >
 	 	<div class="inner">
 	 		<a href="#sTop" class="subNavBtn">Home</a>
-	 		<a href="#s1" class="subNavBtn">My Mopeds</a>
-			<a href="#s2" class="subNavBtn">Why Mopeds?</a>
-			<a href="#s3" class="subNavBtn">Try Mopeds!</a>
-			<a href="https://twitter.com/grahammcbain" class="subNavBtn extLink end">Follow me on twitter</a>
+	 		<a href="#s1" class="subNavBtn">About Me</a>
+			<a href="#s2" class="subNavBtn">Why Me</a>
+			<a href="#s3" class="subNavBtn">Try It</a>
+			<a href="https://www.facebook.com/jennafurrie?fref=nf" class="subNavBtn extLink end">Follow me on Facebook</a>
 		</div>
 	</div>
 
 	<div class="section s1" id="s1">
 		<div class="inner ">
-			<h1>My Expensive Hobby</h1>
+			<h1>The Love of my Life</h1>
       	<div class="section">
-					<a href="https://www.google.com/imgres?imgurl=http://www.lacyquarterhorses.com/quarter-horses-for-sale-images/quarter-horse-breeding-stallions/Quarter-Horse-San-Bolero.JPG&imgrefurl=http://www.lacyquarterhorses.com/breedingstallions.html&h=336&w=448&tbnid=oegIpcgHvhfeXM:&tbnh=150&tbnw=200&docid=jK9lgJ3qHEdpgM&itg=1&usg=__j7jkD972HlxZLiqFYLy27AOf5J8=">
-						<img src="http://www.lacyquarterhorses.com/quarter-horses-for-sale-images/quarter-horse-breeding-stallions/Quarter-Horse-San-Bolero.JPG"/></a>
+					<a href="https://www.facebook.com/jennafurrie/photos?pnref=lhc">
+						<img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xfa1/v/t1.0-9/430515_391081464236021_338992789_n.jpg?oh=864e0a4bb36568e3f68c317468c3cb4e&oe=56E11684"/></a>
 				</div>
 		</div>
 	</div>
@@ -40,8 +41,8 @@
 			<h1>Physical Exercise?</h1>
       <h2>Trying Sitting!</h2>
       <div class="section">
-				<a href="https://www.google.com/imgres?imgurl=http://www.brigadoonfarm.com/sale/Eduardo_stopping.jpg&imgrefurl=http://www.brigadoonfarm.com/sale/sale.htm&h=480&w=596&tbnid=FZ3rCVXXcKja6M:&docid=6vmyUvmiVBT0HM&ei=autoVtLaBPLIjgShsJiYAw&tbm=isch&ved=0ahUKEwjSt42Rp9DJAhVypIMKHSEYBjMQMwgzKBIwEg">
-					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOQlG-3m0sacbEZcjse-nxEKujqN1iPdwyWDLoInJLkoh2kPdo" title="Sit and Slide"/></a>
+				<a href="https://www.facebook.com/jennafurrie/photos?pnref=lhc">
+					<img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpf1/v/t1.0-9/264903_1843389126649_1043725_n.jpg?oh=e8d6c4bfd92336f5fed0b6c8f5a243d3&oe=571601B6" title="Sit and Slide"/></a>
 			</div>
 		</div>
 	</div>
@@ -53,7 +54,8 @@
 			<h1>Try Trails!</h1>
       <h2>Get back to Nature!</h2>
         <div class="section">
-					<a href="http://www.boltmotorbikes.com/"><img src="http://i.imgur.com/AVmlW8k.jpg" title="Alissa McBain"/></a>
+					<a href="https://www.facebook.com/jennafurrie/photos?pnref=lhc">
+						<img src="https://scontent.fsnc1-1.fna.fbcdn.net/hphotos-xpa1/v/t1.0-9/284761_2109450068085_2309677_n.jpg?oh=a0c0980d7343e3a7eb229d0d4319962e&oe=56EA1005" title="Relaxation"/></a>
 				</div>
 
 		</div>
